tests/snapshots/run_wpt_conformance__litert_sign_int8_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sign.https.any.js sign int8 4D tensor, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    signInput: i8[1, 2, 2, 2];
  }

  nodes {
    [signOutput] = sign(signInput, label="");
  }

  outputs { signOutput; }
}
